--- a/eclipse/config/splash.properties
+++ b/eclipse/config/splash.properties
@@ -1,18 +1,17 @@
 #Splash screen properties
-<<<<<<< HEAD
-#Wed Mar 27 17:16:06 PDT 2019
-=======
-#Sun Mar 31 22:23:32 PDT 2019
->>>>>>> bcm-1.0.X
+#Sat Jul 20 14:54:23 PDT 2019
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
+>>>>>>>=bcm-1.0.X
 barBackground=0xFFFFFF
 barBorder=0xC0C0C0
 rotate=false
-bar=0xCB3D35
+<<<<<<<=HEAD
 enabled=true
+bar=0xCB3D35
 resourcePackPath=resources
 logoOffset=0
 forgeTexture=fml\:textures/gui/forge.gif
 fontTexture=textures/font/ascii.png
+=\=\=\=\=\=\=
