Changed effect bits in creative inventory and ignored more metafiles

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,17 @@ eclipse/saves/Test/session\.lock
 eclipse/saves/Test/stats/75998694-2bae-3280-972d-d76ffee01fa1\.json
 
 eclipse/usernamecache\.json
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.history/b7/70580a3246ab00191596f8da1bcbf1fb
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.history/f1/f06b48d346ab00191596f8da1bcbf1fb
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.indexes/e4/b9/22/81/3c/31/7a/history\.index
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.indexes/e4/b9/22/81/3c/31/history\.index
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/25\.png
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/26\.png
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/27\.png
