Break Statements (and more meta ignore)

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,19 @@ eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/25\.png
 eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/26\.png
 
 eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/27\.png
+
+eclipse/\.metadata/\.log
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.history/d6/703ca33048ab00191596f8da1bcbf1fb
+
+eclipse/logs/2019-07-20-6\.log\.gz
+
+eclipse/logs/2019-07-20-7\.log\.gz
+
+eclipse/saves/Test/playerdata/25887e3a-1ce2-3acf-9352-3d844017a709\.dat
+
+eclipse/saves/Test/playerdata/989691b1-d197-3995-a55e-281cda3663ae\.dat
+
+eclipse/saves/Test/stats/25887e3a-1ce2-3acf-9352-3d844017a709\.json
+
+eclipse/saves/Test/stats/989691b1-d197-3995-a55e-281cda3663ae\.json
