Another gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ eclipse/saves/Test/playerdata/989691b1-d197-3995-a55e-281cda3663ae\.dat
 eclipse/saves/Test/stats/25887e3a-1ce2-3acf-9352-3d844017a709\.json
 
 eclipse/saves/Test/stats/989691b1-d197-3995-a55e-281cda3663ae\.json
+
+*.snap
