--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ eclipse/saves/Test/stats/989691b1-d197-3995-a55e-281cda3663ae\.json
 eclipse/saves/Test/stats/
 
 eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.indexes/e4/b9/22/81/3c/31/c0/
+
+eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/\.org\.eclipse\.jdt\.core\.external\.folders/
