--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
 
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/\.org\.eclipse\.jdt\.core\.external\.folders/\.markers\.snap
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/\.org\.eclipse\.jdt\.core\.external\.folders/\.syncinfo\.snap
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.markers\.snap
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.syncinfo\.snap
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.root/\.markers\.snap
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.safetable/org\.eclipse\.core\.resources
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/4\.snap
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.e4\.workbench/workbench\.xmi
+eclipse/\.metadata/
 
 eclipse/config/splash\.properties
 
@@ -57,24 +43,6 @@ eclipse/saves/Test/stats/75998694-2bae-3280-972d-d76ffee01fa1\.json
 
 eclipse/usernamecache\.json
 
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.history/b7/70580a3246ab00191596f8da1bcbf1fb
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.history/f1/f06b48d346ab00191596f8da1bcbf1fb
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.indexes/e4/b9/22/81/3c/31/7a/history\.index
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.indexes/e4/b9/22/81/3c/31/history\.index
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/25\.png
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/26\.png
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.jdt\.ui/jdt-images/27\.png
-
-eclipse/\.metadata/\.log
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.history/d6/703ca33048ab00191596f8da1bcbf1fb
-
 eclipse/logs/2019-07-20-6\.log\.gz
 
 eclipse/logs/2019-07-20-7\.log\.gz
@@ -94,7 +62,3 @@ eclipse/saves/Test/stats/989691b1-d197-3995-a55e-281cda3663ae\.json
 *.dat
 
 eclipse/saves/Test/stats/
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/Minecraft/\.indexes/e4/b9/22/81/3c/31/c0/
-
-eclipse/\.metadata/\.plugins/org\.eclipse\.core\.resources/\.projects/\.org\.eclipse\.jdt\.core\.external\.folders/
